k8s/messagingservice/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagingservice
  labels:
    app: messagingservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messagingservice
  template:
    metadata:
      labels:
        app: messagingservice
    spec:
      containers:
        - name: messagingservice
          image: maxim58r/messagingservice:latest
          ports:
            - containerPort: 8080
