k8s/messagingservice/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messagingservice-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: messagingservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messagingservice
                port:
                  number: 8080
